[feature] Fixed description
If post longer than 100px post clipped and shown, otherwise
the whole post is shown

--- a/feed/static/css/post.css
+++ b/feed/static/css/post.css
@@ -51,6 +51,16 @@
     font-size: 17px;
     margin-top:10px;
     color: grey;
+    max-height: 100px;
+    overflow: clip;
+}
+.post-sneak-peak img{
+    max-width: 90%;
+    margin: 0 auto;
+    height: auto;
+    width: auto;
+    display: block;
+    
 }
 
 .read-more{
